getCurrentMonthProgress